adds new aliases and functions

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,8 @@
-# working files
-.vim/viminfo
-.vim/swaps/*
-.vim/undo
-
 # git credential file
 .gitconfig.local
 
-
-
-
 # Folder view configuration files
-*.DS_Store
+.DS_Store
 Desktop.ini
 
 # Thumbnail cache files
@@ -23,7 +15,3 @@ Thumbs.db
 
 # Compiled Python files
 *.pyc
-
-# fish shell
-fishd.*
-.config/fish/fish_history
